# Carteira-de-Investimento-Rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20260610000000_init.sql  20260629000000_add_index.sql
src/: auth.rs  main.rs  models.rs  portfolio.rs  quotes.rs
templates/: dashboard.html  login.html  register.html
