[package]
name = "carteira_investimentos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
askama = "0.16.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
getrandom = "0.4.2"
jsonwebtoken = "9.3.0"
rust_decimal = { version = "1.42.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.12.12", features = ["json"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite", "uuid", "chrono", "rust_decimal", "tls-rustls" ] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }


